--- a/Oregon Trail/Oregon Trail/Oregon Trail.csproj
+++ b/Oregon Trail/Oregon Trail/Oregon Trail.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Windows\Continue.xaml.cs">
       <DependentUpon>Continue.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Windows\NewGame.xaml.cs">
+      <DependentUpon>NewGame.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\Startwindow.xaml.cs">
       <DependentUpon>Startwindow.xaml</DependentUpon>
     </Compile>
@@ -105,6 +108,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Windows\NewGame.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\Startwindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
